--- a/planit-next/package.json
+++ b/planit-next/package.json
@@ -27,7 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
-    "next": "13.4.19",
+    "next": "^16.0.5",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
